--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     ],
     "version": "0.0.1",
     "scripts": {
-        "start": "./node_modules/.bin/lumo -D org.clojure/tools.cli:0.3.7 -c src -m eos-deploys.core"
+        "start": "lumo -D org.clojure/tools.cli:0.3.7 -c src -m eos-deploys.cli"
     }
 }
