--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
     "name": "eos-cljs",
     "dependencies": {
         "@jeisses/tools.cli": "0.4.2-2",
-        "eosjs": "^20.0.0-ba6d627.0",
+        "eosjs": "^20.0.3",
         "lumo-cljs": "^1.9.0",
-        "node-fetch": "^2.6.1",
-        "scatterjs-core": "^2.7.16",
-        "scatterjs-plugin-eosjs2": "^1.5.0"
+        "node-fetch": "^2.6.1"
     },
     "directories": {
         "lib": "src/"
